# django_streamlit

./: pyproject.toml  streamlit_app.py
app/: urls.py  views.py
templates/: streamlit_view.html
teste_django/: asgi.py  settings.py  urls.py  wsgi.py
teste_django/teste_django/: settings.py  urls.py
